# versioningit

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: install-git-url.yml  install-zip-url.yml  minimum-vcs.yml  no-vcs.yml  test-install-git-archive.yml  test-install-vcs.yml  test.yml
.github/workflows/tools/minimum-vcs/: Dockerfile
.github/workflows/tools/no-vcs/: Dockerfile
docs/: api.rst  changelog.rst  command.rst  conf.py  configuration.rst  hatch.rst  how.rst  index.rst  notes.rst  requirements.txt  runtime-version.rst  writing-methods.rst
src/versioningit/: __init__.py  __main__.py  basics.py  cmdclass.py  cmdclasses.py  config.py  core.py  datacast.py  errors.py  get_cmdclasses.py  git.py  hatch.py  hg.py  hook.py  logging.py  methods.py  next_version.py  onbuild.py  util.py
test/: conftest.py  test_config.py  test_datacast.py  test_end2end.py  test_end2end_archives.py  test_end2end_git.py  test_end2end_hg.py  test_format.py  test_get_version.py  test_git.py  test_hg.py  test_logging.py  test_main.py  test_next_version.py  test_no_vcs.py  test_onbuild.py  test_tag2version.py  test_util.py  test_write.py
test/data/config/: custom-methods.py  custom-methods.toml  custom-paramless.py  custom-paramless.toml  empty.py  empty.toml  forbidden.py  forbidden.toml  hatch-and-std.toml  hatch.py  hatch.toml  other-hatch-and-std.py  other-hatch-and-std.toml  paramless.py  paramless.toml  params.py  params.toml  step-args.py  step-args.toml
test/data/config-error/: bad-method.toml  bad-method.txt  bad-module-dir.toml  bad-module-dir.txt  bad-module.toml  bad-module.txt  bad-section.toml  bad-section.txt  bad-value.toml  bad-value.txt  bad-ving.toml  bad-ving.txt  no-module.toml  no-module.txt  no-value.toml  no-value.txt  other-hatch.toml  other-hatch.txt
test/data/hg-archival/: distance.json  distance.txt  exact.json  exact.txt  multi-latesttag.json  multi-latesttag.txt  multi-tag.txt  null-latesttag.json  null-latesttag.txt
test/data/metadata/: desc-in-header.eml  desc-in-payload.eml  no-version-payload.eml  no-version.eml  version-after-desc.eml  version-in-desc.eml
test/data/replace-version/: append-with-date.py  append.py  latin1-edited.txt  line-sepped.py  line2block.py  multi-matches.py  nl-append.txt  nomatch.py  not-source.py  replacement.py  source.py  with-date.py
test/data/replace-version/base/: comment.py  latin1.txt  line-sep.py  repeats.py  wheel_file.py
test/data/repos/: no-versioningit.txt
test/data/repos/archives/: git-archive-exact.json  hg-archive-default-tag.json
test/data/repos/errors/: hatch-no-tag.json  hg-no-tag.json  no-tag.json  template-fields-error.json
test/data/repos/git/: added-no-commits-default-tag.json  archive-mixed-tags.json  archive-repo-exclude.json  archive-repo-match.json  archive-repo-mixed.json  archive-repo.json  archive.json  custom-format-dirty.json  custom-format-distance-dirty.json  custom-format-distance.json  custom-method-pkg.json  custom-method-src.json  custom-method.json  default-tag.fields.json  default-tag.json  default-version-bad.json  default-version-bad.marks  default-version-onbuild-write.json  default-version.json  detached-exact.fields.json  detached-exact.json  dirty.json  distance-dirty.fields.json  distance-dirty.json  distance.fields.json  distance.json  exact.exclude.fields.json  exact.fields.json  exclude.fields.json  exclude.json  match.fields.json  match.json  onbuild-bases.json  onbuild-cfg.json  onbuild-nonidem.json  onbuild-write-fields.json  onbuild-write-norming.json  onbuild-write.json  onbuild.json  vgit-toml.json  (+4 more)
test/data/repos/git-errors/: archive-no-tag.json  no-tag.marks
test/data/repos/hatch/: both-config.json  distance-dirty.json  distance.json  hatch-config-empty-std.json  hatch-config.json  no-std-config.json  onbuild-both-config.json  onbuild-fields.json  onbuild.json  std-config.json  write-py.json  write-txt.json
test/data/repos/hg/: default-tag-fallback.fields.json  default-tag-fallback.json  default-tag.fields.json  default-tag.json  dirty.json  distance-dirty.fields.json  distance-dirty.json  distance.fields.json  distance.json  exact.fields.json  exact.json  multi-tag.json  pattern.fields.json  pattern.json
test/test_methods/: test_format.py  test_git.py  test_hg.py  test_onbuild.py  test_tag2version.py  test_template_fields.py  test_write.py
versioningit/: __init__.py  __main__.py  basics.py  core.py  errors.py  logging.py
