[metadata]
name = versioningit
version = attr:versioningit.__version__
description = Versioning It with your Version In Git
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = versioningit@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/versioningit

keywords =
    Git
    Mercurial
    VCS
    packaging
    setuptools
    version

classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Framework :: Setuptools Plugin
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Version Control
    Topic :: Software Development :: Version Control :: Git
    Topic :: Software Development :: Version Control :: Mercurial
    Typing :: Typed

project_urls =
    Source Code = https://github.com/jwodder/versioningit
    Bug Tracker = https://github.com/jwodder/versioningit/issues
    Documentation = https://versioningit.readthedocs.io

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >=3.7
install_requires =
    importlib-metadata >= 3.6; python_version < "3.10"
    packaging >= 17.1
    tomli >= 1.2, < 3.0; python_version < "3.11"

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    versioningit = versioningit.__main__:main

setuptools.finalize_distribution_options =
    versioningit = versioningit.hook:setuptools_finalizer

versioningit.vcs =
    git = versioningit.git:describe_git
    git-archive = versioningit.git:describe_git_archive
    hg = versioningit.hg:describe_hg

versioningit.tag2version =
    basic = versioningit.basics:basic_tag2version

versioningit.next_version =
    minor = versioningit.next_version:next_minor_version
    minor-release = versioningit.next_version:next_minor_release_version
    smallest = versioningit.next_version:next_smallest_version
    smallest-release = versioningit.next_version:next_smallest_release_version
    null = versioningit.next_version:null_next_version

versioningit.format =
    basic = versioningit.basics:basic_format

versioningit.template_fields =
    basic = versioningit.basics:basic_template_fields

versioningit.write =
    basic = versioningit.basics:basic_write

versioningit.onbuild =
    replace-version = versioningit.onbuild:replace_version_onbuild

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = True
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
exclude = test/data/
